# robothon23_vision

./: .gitignore  README.md  pyproject.toml
examples/: .gitignore  example_sift.py  full_process.py  investigate_hsv_in_image.py  try_feature_detector.py  tune_feature_detector.py
robothon23vision/detectors/: blue_area_detector.py  blue_button_detector.py  detector_template.py  errors.py  feature_detector.py  gray_area_detector.py  red_button_detector.py  red_circles_detector.py  silver_circle_detector.py  white_circle_detector.py
robothon23vision/localization/: localizer.py  localizer_sift.py
robothon23vision/robothon23.egg-info/: PKG-INFO  requires.txt  top_level.txt
robothon23vision/utils/: compute_tf.py  get_color_under_cursor.py
