[tool.poetry]
name = "robothon23vision"
version = "0.1.1"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <=3.10"
opencv-python = "^4.7.0.72"
scipy = "^1.10.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
